--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   continuous-delivery:
 
-    runs-on: ubuntu-latest
+    runs-on: macOS-12
 
     steps:
       - name: Checkout
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 3.1.2p20
           bundler-cache: true
 
       - name: Deploy
