--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ lang: en
 prefer_datetime_locale:
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: 
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Dewan Shresha                          # the main title
+title: Dewan Shrestha                          # the main title
 
 tagline: Bioinformatics Blog   # it will display as the sub-title
 
