--- a/_config.yml
+++ b/_config.yml
@@ -89,10 +89,10 @@ avatar: https://pbs.twimg.com/profile_images/1106327178382397440/yCl9Agfr_400x40
 toc: true
 
 comments:
-  active:  disqus       # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active:         # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
-    shortname:    'https://dewshr-github-io.disqus.com/embed.js' # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+    shortname:     # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
   utterances:
     repo:         # <gh-username>/<repo>
