--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ timezone:
 
 title: Dewan Shrestha                          # the main title
 
-tagline: Bioinformatics Blog   # it will display as the sub-title
+tagline: Bioinformatics   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
